compiler/w_session/tests/errors/return-void-typecheck.w
fn main(): u32 {
    return;
    1
}