compiler/w_session/tests/errors/return-void-typecheck.stderr
tests/errors/return-void-typecheck.w:2:5: error: must return value
    return;
    ^^^^^^
